Update note about bloody consistent names

--- a/dos33.html
+++ b/dos33.html
@@ -2406,7 +2406,7 @@ With that "legalese" out of the way ... enjoy the read!
                     128             JSR CLALL
                     129 <a class='f' name='ELOAD0'   >ELOAD0      </a>JSR EOPN1
                     130 ;
-                    131 <a class='f' name='ELD1'     >ELD1        </a>EQU *                                           ; *sigh* Pick a bloody <i>consistent</i> naming schema
+                    131 <a class='f' name='ELD1'     >ELD1        </a>EQU *                                           ; *sigh* Pick a bloody <i>consistent</i> naming schema: ELOAD# or ELD#
                     132             LDA #$<span class='n'>23</span>        ; STRIP UNRELATED STUFF         ; <a class='magic' name='_'>magic number</a>
                     133             AND CCBFUC      ; OUT OF FUC
                     134             BEQ NBPER       ; BR IF ERROR
