Googoo, gaga, ccbbba

--- a/dos33.html
+++ b/dos33.html
@@ -2458,7 +2458,7 @@ With that "legalese" out of the way ... enjoy the read!
                     180             STY IBSOP+1     ; SET NEW SOP
                     181             STX IBSOP
                     182 <a class='f' name='LD3'      >LD3         </a>EQU *
-                    183             STX CCBBBA      ; SET BLOCK ADDR                ; A single underscore '_' would go a LONG way towards readability
+                    183             STX CCBBBA      ; SET BLOCK ADDR                ; Googoo, Gaga? A single underscore '_' would go a LONG way towards readability
                     184             STY CCBBBA+1                                    ; CCB_BBA
                     185             JMP GODOS
                     186 ;
