Ironically fix spelling

--- a/dos33.html
+++ b/dos33.html
@@ -1817,7 +1817,7 @@ With that "legalese" out of the way ... enjoy the read!
 208B:39 09 29       117             AND CMDSTB,Y    ; THEN
 208E:F0 02          118             BEQ SERR1       ; THIS IS ERROR, ELSE
                     119 ;
-2090:10 3F          120             BPL SOPTS       ; ITS EXCUTABLE WITHOUT         ; *spellling* Executable
+2090:10 3F          120             BPL SOPTS       ; ITS EXCUTABLE WITHOUT         ; *spelling* Executable
                     121 ;
 2092:4C 00 20       122 SERR1       JMP CNF
                     123 ;
