--- a/dos33.html
+++ b/dos33.html
@@ -3502,7 +3502,7 @@ With that "legalese" out of the way ... enjoy the read!
                     052 ; DOS ADR TABLES (RELOCATED)
 <hr>                    053 ;                                                           ; === Page <a class='page' name='page61'>61</a>
                     054 <a class="d" name="SAT2"  >SAT2        </a>EQU *                                           ; Start Address Table; Gee, we couldn't have put this at $1D00 to save 4 bytes in ADRTAB?!
-2AC1:E8 37          055 <a class="d" name="AIOB"  >AIOB        </a>DW <a class="v" href="#IOB"     >IOB</a>          ; 5-ADR IOB                     ; What happened to 1 .. 4 ??? At RVT, WVT ?
+2AC1:E8 37          055 <a class="d" name="AIOB"  >AIOB        </a>DW <a class="v" href="#IOB"     >IOB</a>          ; 5-ADR IOB                     ; Also see <a class='v' href='#BAIOB'>BAIOB</a>; What happened to 1 .. 4 ??? At RVT, WVT ?
 2AC3:BB 33          056 <a class="d" name="AVTOC" >AVTOC       </a>DW <a class="v" href="#VTOC"    >VTOC</a>         ; 6-ADR VTOC
 2AC5:BB 34          057 <a class="d" name="AVOLDR">AVOLDR      </a>DW <a class="v" href="#VOLDIR"  >VOLDIR</a>       ; 7-ADR VOLDIR
 2AC7:00 40          058 <a class="d" name="AEND"  >AEND        </a>DW <a class="v" href="#ENDOFDOS">ENDOFDOS</a>     ;END OF DOS                     ; See <a class='v' href='#REPAGE'>REPAGE</a>
@@ -5597,56 +5597,56 @@ Let the complete clusterfrak of bad design commence in <a class='link' href="htt
                     282             LSR A
                     283             TAX
                     284             LDA #0
-                    285             STA $4F8,X                                      ; <a class='magic' name='_'>magic number</a> The 40x24 text screen has "memory holes"
-                    286             STA $478,X                                      ; <a class='magic' name='_'>magic number</a> reserved for each Slot 1..7 as "scratchpad" or temp vars
+3732:9D F8 04       285             STA $4F8,X                                      ; <a class='magic' name='_'>magic number</a> The 40x24 text screen has "memory holes"
+3735:9D 78 04       286             STA $478,X                                      ; <a class='magic' name='_'>magic number</a> reserved for each Slot 1..7 as "scratchpad" or temp vars
                     287             JSR BOOTIO      ; GO READ DOS
                     288 ;
                     <a class='line' name='BOOTLDR.289'>289</a> ;DOSINT - INITIALIZE DOS                                    ; /sarcasm Couldn't afford extra 'i' in "dosinIt"
                     290 ;
                     291 <a class="f" name="DOSINT"   >DOSINT      </a>EQU *                                            ; Ironically in Boot Loader, not Dos Init
-                    292 
-                    293 
-                    294 
+                    292             LDX #$FF
+                    293             TXS
+                    294             STX IBVOL
                     <a class='line' name='BOOTLDR.295'>295</a>             JMP <a class="x" href="#RCPATCH">RCPATCH</a>
                     296 <a class="f" name="RCBACK"   >RCBACK      </a>JSR SEKBD
                     297 ;
                     <a class='line' name='BOOTLDR.298'>298</a> <a class="f" name="DI3"      >DI3         </a>JMP <a class="x" href="#DOSREL">DOSREL</a>      ; GO TO POST INIT ROUTINE       ; Relocate DOS to high mem
                     299             PAGE
-                    300 
-                    301 
-                    302 
+                    300 <a class='f' name='WBOOT'    >WBOOT       </a>EQU *                                           ; Write Boot; part of the INIT process
+                    301             LDA ADOSLD+1
+                    302             SEC
                     303             SBC IBBUFP+1
-                    304             STA BRWCNT      ;COMPUT PAGE COUNT
-                    305 
-                    306 
-                    307 
-                    308 
-                    309 
-                    310 
-                    311 
-                    312 
-                    313 
-                    314 
-                    315 *                           ; BACKWARDS TO TRK 0,SEC C
-                    316 
-                    317 
-                    318 
-                    319 
-                    320 
-                    321 
-                    322 
-                    323 
-                    324 
-                    325 
-                    326 
-                    327 
-                    328 
-                    329             DS 6,0                                          ; *wastes* 6 bytes
-                    330 
-                    331 
-                    332 
-                    333 
-                    334 
+<hr>                    304             STA BRWCNT  ;COMPUT PAGE COUNT              ; === Page <a class='page' name='page13'>13</a> ===
+                    305             LDA ADOSLD+1
+                    306             STA IBBUFP+1    ;BUFFER=LAST PAGE OF RWTS
+                    307             DEC IBBUFP+1
+                    308             LDA #2
+                    309             STA IBTRK
+                    310             LDA #4
+                    311             STA IBSECT
+3767:A9 02          312             LDA #2                                          ; <a class='magic' name='_'>magic number</a> Why not <span class='code'>IBCWTS</span> ???
+3769:8D F4 37       313             STA IBCMD       ;COMMAND = WRITE
+376C:20 93 37       314             JSR BOOTIO      ;WRITE DOS IMAGE TRK 2, SEC 4
+                    315 *                           ;BACKWARDS TO TRK 0,SEC C
+                    316             LDA ADOSLD+1
+                    317             STA GRSPG       ;BOOTSTRAP LOAD ADDRESS
+                    318             CLC
+                    319             ADC #9
+                    320             STA IBBUFP+1    ;BUFFER ADDRESS OF END OF BOOT
+                    321             LDA #10
+                    322             STA BRWCNT      ;SECTOR COUNT TO WRITE          ; /sarcasm If only <span class='code'>NUM_SEC_WRITE</span>
+                    323             SEC
+                    324             SBC #1
+                    325             STA GRPGC       ;BOOT LAST SECTOR #
+                    326             STA IBSECT      ;START AT END OF RWTS&amp;BOOT
+                    327             JSR BOOTIO      ;AND WRITE DOWN TO ZERO
+378C:60             328             RTS
+378D:00 00 00 00    329             DS 6,0                                          ; <a class='mem' name='_378D'>wastes</a> 6 bytes
+3791:00 00          330             PAGE
+                    331 <a class='f' name='BOOTIO'   >BOOTIO      </a>EQU *
+3793:AD E5 37       332             LDA BAIOB+1                                     ; <span class='code'>JSR <a class='x' href='#IOBLDR'>IOBLDR</a></span> loads AIOB &rarr; <a class='v' href='#IOB'>IOB</a>
+                    333             LDY BAIOB
+                    334             JSR DISKIO
                     335 
                     336 
                     337 
@@ -5694,7 +5694,7 @@ Let the complete clusterfrak of bad design commence in <a class='link' href="htt
                     379 
                     380 
                     381 
-37E4:E8 37          382 BAIOB       DW IOB
+37E4:E8 37          382 <a class='d' name='BAIOB'    >BAIOB       </a>DW <a class='v' href='#IOB'>IOB</a>                                          ; <a class='v' href='#BAIOB'>BAIOB</a> and <a class='v' href='#AIOB'>AIOB</a> both point to <a class='v' href='#IOB'>IOB</a>
 37E6:00 36          383 ADOSLD      DW TRK0LDR
                     384             PAGE
                     385 ;
